--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "@home/tsconfig/server.json",
+  "compilerOptions": {
+    "outDir": "dist",
+    "noEmit": false
+  },
   "include": ["src"]
 }
-
