--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,11 +5,14 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc -p tsconfig.json",
+    "prestart": "pnpm --filter @home/web build",
     "start": "node dist/index.js",
     "lint": "eslint \"src/**/*.ts\"",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@home/types": "workspace:*",
+    "@fastify/static": "^6.12.0",
     "fastify": "^4.26.2"
   },
   "devDependencies": {
