--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "typecheck": "turbo run typecheck",
     "lint": "turbo run lint",
     "test": "turbo run test",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "e2e:install": "playwright install --with-deps",
     "format": "prettier --write .",
     "changeset": "changeset",
     "release": "changeset publish",
@@ -18,6 +21,7 @@
     "start:api": "pnpm --filter @home/api build && pnpm --filter @home/api start"
   },
   "devDependencies": {
+    "@playwright/test": "^1.49.0",
     "@eslint/js": "^9.14.0",
     "@changesets/cli": "^2.27.8",
     "eslint-config-prettier": "^9.1.0",
