--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -12,6 +12,9 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint \"src/**/*.ts\""
   },
+  "dependencies": {
+    "zod": "^4.0.0"
+  },
   "devDependencies": {
     "@home/eslint-config": "workspace:*",
     "@home/tsconfig": "workspace:*",
