--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,6 +2,9 @@
   "name": "@home/api",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "22.18.0"
+  },
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc -p tsconfig.json",
@@ -18,7 +21,7 @@
   "devDependencies": {
     "@home/eslint-config": "workspace:*",
     "@home/tsconfig": "workspace:*",
-    "@types/node": "^20.11.0",
+    "@types/node": "^22.0.0",
     "eslint": "^9.11.1",
     "tsx": "^4.19.1",
     "typescript": "^5.6.2"
