--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,6 +2,9 @@
   "name": "@home/web",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "22.18.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
