expose git commit version

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "node": "22.18.0"
   },
   "scripts": {
-    "dev": "turbo run dev --parallel",
-    "dev:web": "pnpm --filter @home/web dev",
-    "dev:api": "pnpm --filter @home/api dev",
+    "dev": "COMMIT_SHA=$(git rev-parse --short HEAD || echo dev) VITE_COMMIT_SHA=$(git rev-parse --short HEAD || echo dev) turbo run dev --parallel",
+    "dev:web": "COMMIT_SHA=$(git rev-parse --short HEAD || echo dev) VITE_COMMIT_SHA=$(git rev-parse --short HEAD || echo dev) pnpm --filter @home/web dev",
+    "dev:api": "COMMIT_SHA=$(git rev-parse --short HEAD || echo dev) pnpm --filter @home/api dev",
     "build": "turbo run build",
     "typecheck": "turbo run typecheck",
     "lint": "turbo run lint",
