--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,10 +24,11 @@ jobs:
           node-version: 22.18.0
           cache: 'pnpm'
 
-      - name: Enable and prepare Corepack (pnpm)
-        run: |
-          corepack enable
-          corepack prepare pnpm@9.12.0 --activate
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9.12.0
+          run_install: false
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile=false
