--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,7 +7,7 @@
     "node": "22.18.0"
   },
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "tsx watch --env-file=.env src/index.ts",
     "build": "tsc -p tsconfig.json",
     "prestart": "pnpm --filter @home/web build",
     "start": "node dist/index.js",
@@ -15,9 +15,11 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@home/types": "workspace:*",
+    "@anthropic-ai/sdk": "^0.71.2",
     "@fastify/static": "^6.12.0",
-    "fastify": "^4.26.2"
+    "@home/types": "workspace:*",
+    "fastify": "^4.26.2",
+    "openai": "^6.15.0"
   },
   "devDependencies": {
     "@home/tsconfig": "workspace:*",
