--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
     "@fastify/static": "^6.12.0",
+    "@google/generative-ai": "^0.24.1",
     "@home/types": "workspace:*",
     "fastify": "^4.26.2",
     "openai": "^6.15.0"
