--- a/apps/doc-processor/pyproject.toml
+++ b/apps/doc-processor/pyproject.toml
@@ -23,6 +23,16 @@ dev = [
     "pyright>=1.1.0",
 ]
 
+# Use CPU-only PyTorch (saves ~1.5GB in Docker image)
+[[tool.uv.index]]
+name = "pytorch-cpu"
+url = "https://download.pytorch.org/whl/cpu"
+explicit = true
+
+[tool.uv.sources]
+torch = { index = "pytorch-cpu" }
+torchvision = { index = "pytorch-cpu" }
+
 [tool.ruff]
 target-version = "py311"
 line-length = 100
