--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,22 @@
 # Usage: docker-compose up
 
 services:
+  postgres:
+    image: postgres:16-alpine
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_DB: home_dev
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
   api:
     build:
       context: .
@@ -12,9 +28,13 @@ services:
       - NODE_ENV=development
       - PORT=3001
       - DOC_PROCESSOR_URL=http://doc-processor:8000
+      - DATABASE_URL=postgres://postgres:postgres@postgres:5432/home_dev
       - SERVE_STATIC=false
     depends_on:
-      - doc-processor
+      postgres:
+        condition: service_healthy
+      doc-processor:
+        condition: service_started
 
   doc-processor:
     build:
@@ -24,3 +44,6 @@ services:
       - "8000:8000"
     environment:
       - PORT=8000
+
+volumes:
+  pgdata:
