another deploy fix

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -21,20 +21,22 @@
     "lint": "eslint \"src/**/*.ts\"",
     "migrate:create": "node-pg-migrate create --migration-file-language ts -m migrations",
     "migrate:up": "dotenv -e .env -- node-pg-migrate up -m migrations",
+    "migrate:up:prod": "node-pg-migrate up -m migrations",
     "migrate:down": "dotenv -e .env -- node-pg-migrate down -m migrations",
     "db:introspect": "dotenv -e .env -- drizzle-kit introspect && ./scripts/post-introspect.sh",
     "db:generate": "dotenv -e .env -- drizzle-kit generate"
   },
   "dependencies": {
     "drizzle-orm": "^0.45.1",
-    "pg": "^8.13.0"
+    "node-pg-migrate": "^7.9.0",
+    "pg": "^8.13.0",
+    "tsx": "^4.19.1"
   },
   "devDependencies": {
     "@home/tsconfig": "workspace:*",
     "@types/pg": "^8.11.0",
     "dotenv-cli": "^11.0.0",
     "drizzle-kit": "^0.31.8",
-    "node-pg-migrate": "^7.9.0",
     "typescript": "^5.6.2"
   }
 }
