--- a/package.json
+++ b/package.json
@@ -24,19 +24,27 @@
     "changeset": "changeset",
     "release": "changeset publish",
     "start:web": "pnpm --filter @home/web build && pnpm --filter @home/web preview",
-    "start:api": "pnpm --filter @home/api build && pnpm --filter @home/api start"
+    "start:api": "pnpm --filter @home/api build && pnpm --filter @home/api start",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix"
+    ]
   },
   "devDependencies": {
-    "@playwright/test": "^1.49.0",
-    "@eslint/js": "^9.14.0",
     "@changesets/cli": "^2.27.8",
+    "@eslint/js": "^9.14.0",
+    "@playwright/test": "^1.49.0",
+    "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint": "^9.11.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
     "prettier": "^3.3.3",
     "turbo": "^2.1.1",
-    "typescript-eslint": "^8.8.1",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.8.1"
   }
 }
