--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ railway-vars.txt
 # Drizzle-kit artifacts (we use node-pg-migrate for migrations)
 packages/db/src/schema/meta/
 packages/db/src/schema/*.sql
+
+# Generated documents on localhost.
+apps/api/documents/*
