support multiple worktrees

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -3,8 +3,8 @@ OPENAI_API_KEY=sk-...
 ANTHROPIC_API_KEY=sk-ant-...
 GEMINI_API_KEY=AI...
 
-# Document Processor Service URL
-DOC_PROCESSOR_URL=http://localhost:8000
+# Document Processor Service URL (set automatically by pnpm dev, override if needed)
+# DOC_PROCESSOR_URL=http://localhost:8000
 
 # Database (local development default)
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/home_dev
