--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "22.18.0"
   },
   "scripts": {
-    "setup": "./scripts/setup.sh",
+    "bootstrap": "./scripts/setup.sh",
     "worktree:add": "./scripts/worktree-add.sh",
     "dev": "./scripts/dev-worktree.sh",
     "dev:web": "COMMIT_SHA=$(git rev-parse --short HEAD || echo dev) VITE_COMMIT_SHA=$(git rev-parse --short HEAD || echo dev) pnpm --filter @home/web dev",
