more setup fixes

--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,14 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalPassThroughEnv": ["COMMIT_SHA"],
+  "globalPassThroughEnv": [
+    "COMMIT_SHA",
+    "PORT",
+    "VITE_PORT",
+    "VITE_API_PORT",
+    "VITE_COMMIT_SHA",
+    "DOC_PROCESSOR_PORT",
+    "DOC_PROCESSOR_URL"
+  ],
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
