--- a/apps/doc-processor/package.json
+++ b/apps/doc-processor/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "uv run uvicorn src.main:app --reload --host 0.0.0.0 --port ${DOC_PROCESSOR_PORT:-8000}",
+    "dev": "uv run uvicorn src.main:app --reload --host 0.0.0.0 --port ${HOME_DOC_PROCESSOR_PORT:-8000}",
     "build": "echo 'Python service - no build step'",
     "start": "uv run uvicorn src.main:app --host 0.0.0.0 --port 8000",
     "lint": "uv run ruff check src/",
