--- a/turbo.json
+++ b/turbo.json
@@ -2,12 +2,11 @@
   "$schema": "https://turbo.build/schema.json",
   "globalPassThroughEnv": [
     "COMMIT_SHA",
-    "PORT",
-    "VITE_PORT",
-    "VITE_API_PORT",
     "VITE_COMMIT_SHA",
-    "DOC_PROCESSOR_PORT",
-    "DOC_PROCESSOR_URL"
+    "HOME_API_PORT",
+    "HOME_WEB_PORT",
+    "HOME_DOC_PROCESSOR_PORT",
+    "HOME_DOC_PROCESSOR_URL"
   ],
   "tasks": {
     "build": {
