copilot feedback + fixes after local test

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,12 @@
 # Local dev:  cp .env.example .env && pnpm dev
 # Docker:     cp .env.example .env && docker compose up -d
 
-# Database (for Docker - local dev uses defaults)
-HOME_POSTGRES_PASSWORD=changeme
+# Database (defaults work for local dev)
+# IMPORTANT: For production Docker deployments, change the password!
+DATABASE_URL=postgres://postgres:postgres@localhost:5432/home_dev
+HOME_POSTGRES_PASSWORD=postgres
+DOCUMENT_STORAGE_PATH=./documents
+
 
 # Ports (optional - defaults shown)
 # HOME_API_PORT=3001
