--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -20,11 +20,11 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint \"src/**/*.ts\"",
     "migrate:create": "node-pg-migrate create --migration-file-language ts -m migrations",
-    "migrate:up": "../../scripts/with-env.sh node-pg-migrate up -m migrations",
+    "migrate:up": "../../scripts/with-env.sh npx node-pg-migrate up -m migrations",
     "migrate:up:prod": "node-pg-migrate up -m migrations",
-    "migrate:down": "../../scripts/with-env.sh node-pg-migrate down -m migrations",
-    "db:introspect": "../../scripts/with-env.sh drizzle-kit introspect && ./scripts/post-introspect.sh",
-    "db:generate": "../../scripts/with-env.sh drizzle-kit generate"
+    "migrate:down": "../../scripts/with-env.sh npx node-pg-migrate down -m migrations",
+    "db:introspect": "../../scripts/with-env.sh npx drizzle-kit introspect && ./scripts/post-introspect.sh",
+    "db:generate": "../../scripts/with-env.sh npx drizzle-kit generate"
   },
   "dependencies": {
     "drizzle-orm": "^0.45.1",
