--- a/turbo.json
+++ b/turbo.json
@@ -3,6 +3,7 @@
   "globalPassThroughEnv": [
     "COMMIT_SHA",
     "VITE_COMMIT_SHA",
+    "DATABASE_URL",
     "HOME_API_PORT",
     "HOME_WEB_PORT",
     "HOME_DOC_PROCESSOR_PORT",
