--- a/turbo.json
+++ b/turbo.json
@@ -4,6 +4,7 @@
     "COMMIT_SHA",
     "VITE_COMMIT_SHA",
     "DATABASE_URL",
+    "DOCUMENT_STORAGE_PATH",
     "HOME_API_PORT",
     "HOME_WEB_PORT",
     "HOME_DOC_PROCESSOR_PORT",
