--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "prettier": "^3.3.3",
+    "tsx": "^4.19.1",
     "turbo": "^2.1.1",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.8.1"
