prompt and document metadata changes

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ packages/db/src/schema/*.sql
 
 # Generated documents on localhost.
 apps/api/documents/*
+documents/*
 
 # Local seed scripts with API keys
 scripts/seed-providers.ts
