--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dev:doc-processor": "pnpm --filter @home/doc-processor dev",
     "setup:doc-processor": "cd apps/doc-processor && ./setup.sh",
     "process-docs": "./scripts/with-env.sh pnpm exec tsx apps/api/src/scripts/process-documents.ts",
+    "test-resize": "./scripts/with-env.sh pnpm exec tsx apps/api/src/scripts/test-image-resize.ts",
     "build": "turbo run build",
     "typecheck": "turbo run typecheck",
     "lint": "turbo run lint",
