--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -21,6 +21,7 @@
     "@home/db": "workspace:*",
     "@home/types": "workspace:*",
     "fastify": "^4.26.2",
+    "jimp": "^1.6.0",
     "openai": "^6.15.0",
     "sharp": "^0.34.5"
   },
