--- a/.env.example
+++ b/.env.example
@@ -8,10 +8,14 @@ DATABASE_URL=postgres://postgres:postgres@localhost:5432/home_dev
 DOCUMENT_STORAGE_PATH=./documents
 
 
-# Ports (optional - defaults shown)
+# Ports (optional - only needed for custom deployments)
 # HOME_API_PORT=3001
-# HOME_DOC_PROCESSOR_PORT=8000
 # HOME_WEB_PORT=5173
+
+# Doc Processor URL (only needed for Railway/custom deployments)
+# For docker-compose: uses internal networking (http://doc-processor:8000)
+# For local dev: uses http://localhost:8000
+# HOME_DOC_PROCESSOR_URL=https://your-doc-processor.up.railway.app
 
 # Pin to specific version (Docker only)
 # VERSION=latest
