--- a/apps/doc-processor/package.json
+++ b/apps/doc-processor/package.json
@@ -6,7 +6,7 @@
     "dev": "uv run uvicorn src.main:app --reload --host 0.0.0.0 --port ${HOME_DOC_PROCESSOR_PORT:-8000}",
     "build": "echo 'Python service - no build step'",
     "start": "uv run uvicorn src.main:app --host 0.0.0.0 --port ${HOME_DOC_PROCESSOR_PORT:-8000}",
-    "lint": "uv run ruff check src/",
+    "lint": "uvx ruff check src/",
     "typecheck": "echo 'Python typecheck runs via uv in CI'",
     "test": "uv run pytest tests/"
   }
