--- a/apps/doc-processor/pyproject.toml
+++ b/apps/doc-processor/pyproject.toml
@@ -13,6 +13,10 @@ dependencies = [
     "pydantic>=2.0.0",
     "torch>=2.0.0,<2.2.0",  # 2.2+ dropped macOS x86_64 support
     "numpy<2",  # torch 2.1.x requires numpy 1.x
+    # Face recognition
+    "insightface>=0.7.3",
+    "onnxruntime>=1.19.0",
+    "opencv-python-headless>=4.10.0",
 ]
 
 [project.optional-dependencies]
