minor infra changes

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@
 # Local dev:  cp .env.example .env && pnpm dev
 # Docker:     cp .env.example .env && docker compose up -d
 
+# Fixed project name so all worktrees share the same containers
+COMPOSE_PROJECT_NAME=home-core
+
 # Database (defaults work for local dev)
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/home_dev
 DOCUMENT_STORAGE_PATH=./documents
