--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,7 +23,8 @@
     "fastify": "^4.26.2",
     "jimp": "^1.6.0",
     "openai": "^6.15.0",
-    "sharp": "^0.34.5"
+    "sharp": "^0.34.5",
+    "zod": "^4.0.0"
   },
   "devDependencies": {
     "@home/tsconfig": "workspace:*",
