fastify basic auth

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,25 @@ DATABASE_URL=postgres://postgres:postgres@localhost:5432/home_dev
 DOCUMENT_STORAGE_PATH=./documents
 
 
-# Ports (optional - only needed for custom deployments)
+
+# Basic Authentication (optional - protects the entire site)
+# Set both to enable. Works on both Railway and self-hosted deployments.
+# BASIC_AUTH_USER=admin
+# BASIC_AUTH_PASS=your-secure-password
+
+
+# Reverse proxy (Caddy)
+# SITE_ADDRESS - Domain for automatic HTTPS, or :port for HTTP only
+# Examples: "home.example.com" (HTTPS), "localhost" (HTTP), ":8080" (HTTP on port 8080)
+# SITE_ADDRESS=home.example.com
+# HTTP_PORT=80
+# HTTPS_PORT=443
+
+# For Caddy (self-hosted), also set the bcrypt hash:
+# Generate with: docker run --rm -it caddy:2-alpine caddy hash-password
+# BASIC_AUTH_HASH=$2a$14$...
+
+# Ports (optional - only needed for direct access without reverse proxy)
 # HOME_API_PORT=3001
 # HOME_WEB_PORT=5173
 
