--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
+    "@fastify/basic-auth": "^5.1.1",
     "@fastify/static": "^6.12.0",
     "@google/generative-ai": "^0.24.1",
     "@home/db": "workspace:*",
